trying to get my page to run properly

--- a/polaris-frontend/tsconfig.json
+++ b/polaris-frontend/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/EventsPage.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/EventsPage.tsx", "src/app/test.js"],
   "exclude": ["node_modules"]
 }
